--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 
 <body>
+    <head>
+        <title>Aidan's College Decisions</title>
+        <meta charset = "utf-8" />
+    </head>
     <style>
     a:link {
         color: rgb(251, 246, 0); 
