--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Aidan's College Decisions</title>
         <meta charset = "utf-8" />
+        <meta name = "author" content = "Aidan Shahmaram"/>
+        <meta name = "description" content = "This website contains the lost of colleges I (Aidan Shahmaram) applied as well as the decisions I received"/>
     </head>
     <style>
     a:link {
