--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset = "utf-8" />
         <meta name = "author" content = "Aidan Shahmaram"/>
         <meta name = "description" content = "This website contains the lost of colleges I (Aidan Shahmaram) applied as well as the decisions I received"/>
-        <link rel = "icon" href = "faviconcollege.png" type = "image/x-icon" />
+        <link rel = "icon" href = "favicon.ico" type = "image/x-icon" />
     </head>
     <style>
     a:link {
