--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
+<head>
+    <title>Aidan's College Decisions</title>
+    <meta charset = "utf-8" />
+    <meta name = "author" content = "Aidan Shahmaram"/>
+    <meta name = "description" content = "This website contains the lost of colleges I (Aidan Shahmaram) applied as well as the decisions I received"/>
+    <meta name = "viewport" content = "width=device-width"
+    <link rel = "stylesheet" href = "mainpage.css">
+</head>
 
 <body>
-    <head>
-        <title>Aidan's College Decisions</title>
-        <meta charset = "utf-8" />
-        <meta name = "author" content = "Aidan Shahmaram"/>
-        <meta name = "description" content = "This website contains the lost of colleges I (Aidan Shahmaram) applied as well as the decisions I received"/>
-        <link rel = "icon" href = "favicon.ico" type = "image/x-icon" />
-        link rel = "stylesheet" href = "mainpage.css"
-    </head>
     <style>
     a:link {
         color: rgb(251, 246, 0); 
