--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name = "author" content = "Aidan Shahmaram"/>
     <meta name = "description" content = "This website contains the lost of colleges I (Aidan Shahmaram) applied as well as the decisions I received"/>
     <meta name = "viewport" content = "width=device-width"
-    <link rel = "stylesheet" href = "indexFinal.css">
+    <link rel = "stylesheet" href = "indexFinal.css" />
 </head>
 
 <body>
