--- a/index.html
+++ b/index.html
@@ -87,4 +87,33 @@
         </div>
       </div>
     </body>
+
+    <style>
+        h1{
+            color: red
+        }
+        a:link {
+            color: rgb(251, 246, 0); 
+          background-color: transparent; 
+          text-decoration: none;        
+        }
+
+        a:visited {          
+            color: rgb(251, 246, 0);
+            background-color: transparent;
+            text-decoration: none;    
+        }
+
+        a:hover {
+          color: rgb(251, 246, 0);
+          background-color: transparent;
+          text-decoration: underline;  
+        }
+
+        a:active {
+          color: yellow;
+          background-color: transparent;
+          text-decoration: underline; 
+        }
+    </style>
 </html>
