changed UC, common app, and cal state pages

--- a/UC.html
+++ b/UC.html
@@ -17,7 +17,7 @@
         </div>
         
         <div style="text-align: center; color:rgb(234, 234, 12); border:2px black;" >
-            <h1>UC's</h1>
+            <h1>UC</h1>
         </div>
         
         <div class>
@@ -90,25 +90,25 @@
             width: 50%;
         }
         a:link {
-            color: rgb(251, 246, 0); 
+            color: rgb(113, 20, 95); 
           background-color: transparent; 
           text-decoration: none;        
         }
 
     a:visited {          
-        color: rgb(251, 246, 0);
+        color: rgb(113, 20, 95);
         background-color: transparent;
         text-decoration: none;    
     }
 
     a:hover {
-      color: rgb(251, 246, 0);
+      color: rgb(113, 20, 95);
       background-color: transparent;
       text-decoration: underline;  
     }
 
     a:active {
-      color: yellow;
+      color: rgb(113, 20, 95);
       background-color: transparent;
       text-decoration: underline; 
     }
@@ -200,7 +200,7 @@
     }
 
     html { 
-      background: black no-repeat center center fixed; 
+      background: rgb(255, 255, 255) no-repeat center center fixed; 
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
