--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <div style="font-size: 20px; text-align: center; color:rgb(94, 22, 94); border:2px black;">
-            <h3><u><b>Was on my grind and now I got what I deserve, fuck n*gga</b></u></h3>
+            <h3><u><b>Was on my grind and now I got what I deserve</b></u></h3>
         </div>
     </body>
 
@@ -185,22 +185,5 @@
 }
     </style>
 
-<script>
-    let playBtn = document.getElementsByClassName("play");
-let pauseBtn = document.getElementsByClassName("pause");
-
-let text = document.querySelector("p");
-
-const audio = new Audio("Meek-Mill-Dreams-and-Nightmares-(HiphopKit.com).mp3");
-
-playBtn[0].addEventListener("click", (e) => {
-  audio.play();
-  text.innerHTML = "Audio Playing🔊";
-});
-
-pauseBtn[0].addEventListener("click", (e) => {
-  audio.pause();
-  text.innerHTML = "Audio Paused";
-});
-  </script>
+<script src="index.js"></script>
 </html>
