everything is updatedgit add .git add .

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
       <button class="btn pause">Pause</button>
     </div>
 
-        <div style="text-align: center; color:rgb(149, 32, 149); border:2px black;" >
+    <div style="text-align: center; color:rgb(149, 32, 149); border:2px black;" >
             <br>
             <h3>"I used to pray for times like this, to rhyme like this"</h3> 
             <h3>So I had to grind like that to shine like this</h3>
             <h3>In a matter of time I spent on some locked up shit</h3>
-            <h3>In the back of the paddy wagon , cuffs locked on wrists</h3>
+            <h3>In the back of the paddy wagon, cuffs locked on wrists</h3>
             <h3>Seen my dreams unfold, nightmares come true</h3>
             <h3>It was time to marry the game and I said "Yeah, I do"</h3>
             <h3>If you want it, you gotta see it with a clear-eyed view</h3>
@@ -64,13 +64,13 @@
             <h3>You ain't talkin' 'bout my niggas, then what you talkin' 'bout?</h3>
             <h3>Gangstas move in silence, n*gga, and I don't talk a lot</h3>
             <h3>I don't say a word, I don't say a word</h3>
-        </div>
+    </div>
 
-        <div style="font-size: 20px; text-align: center; color:rgb(94, 22, 94); border:2px black;">
-            <h3><u><b>Was on my grind and now I got what I deserve</b></u></h3>
-        </div>
+    <div style="font-size: 20px; text-align: center; color:rgb(94, 22, 94); border:2px black;">
+        <h3><u><b>Was on my grind and now I got what I deserve</b></u></h3>
+    </div>
     </body>
-
+    
     <style>
             *{
                 font-family: 'Poppins', sans-seriff;
@@ -173,7 +173,7 @@
 }
 
 .play:hover{
-  background-color: #972e2e;
+  background-color: #e63131;
 }
 
 .pause {
