--- a/waitlistFinal.html
+++ b/waitlistFinal.html
@@ -1,9 +1,38 @@
+<html>
 <body>
   <!--First section-->
-  <div style="background-color: #878787; height:1000px; padding-top:80px; text-align: center;"> 
+  <div style="background-color: #878787; padding-top:80px; text-align: center;"> 
     <div style="font-size: 30; text-align: center; color:rgb(49, 49, 49); border-radius:50px black;">
         <h1>Waitlisted</h1>
         <img src="https://media.tenor.com/kFdWkB1Re8UAAAAC/lebron-james-upset.gif"; width = "400"; height = "350">
+        <h1> </h1>
     </div>
+
+    <a style ="color: #cecece; text-decoration: none;" href = "index.html"><button style ="color: #cecece";>Back</button></a>
   </div>
 </body>
+<style>
+  html { 
+      background: #878787 no-repeat center center fixed; 
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+  }
+
+  button{
+    background-color: rgb(49, 49, 49);
+    width: 12rem;
+    font-size: 1rem;
+    font-weight: 600;
+    border: none;
+    border-radius: 0.2rem;
+    padding: 0.5rem;
+    cursor: pointer;
+  } 
+
+  button:hover{
+    background-color: rgb(67, 67, 67);
+  }
+</style>
+</html>
