--- a/calstate.html
+++ b/calstate.html
@@ -4,7 +4,7 @@
         <meta charset = "utf-8" />
         <meta name = "author" content = "Aidan Shahmaram"/>
         <meta name = "description" content = "Decisions for UC schools"/>
-        <meta name = "viewport" content = "width=device-width"
+        <meta name = "viewport" content = "width=device-width">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     </head>
